[gd_scene load_steps=27 format=3 uid="uid://dw8pkwvdjmuhe"]

[ext_resource type="Script" uid="uid://tki2rdscu7ac" path="res://script/scene_5npc.gd" id="1_3lx0t"]
[ext_resource type="Texture2D" uid="uid://cfg0mj1tupnyu" path="res://addons/Idle.png" id="2_b0ase"]
[ext_resource type="Texture2D" uid="uid://cgm1g5r63m2yc" path="res://addons/Walk.png" id="3_j2mg1"]
[ext_resource type="AudioStream" uid="uid://cdh2jej0q16ow" path="res://assets/audio/ambient/humming.mp3" id="4_4yykq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ykmp"]
atlas = ExtResource("2_b0ase")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cyuk"]
atlas = ExtResource("2_b0ase")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_55yko"]
atlas = ExtResource("2_b0ase")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_irg0e"]
atlas = ExtResource("2_b0ase")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3wmc"]
atlas = ExtResource("2_b0ase")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyqan"]
atlas = ExtResource("2_b0ase")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgaxw"]
atlas = ExtResource("2_b0ase")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7goet"]
atlas = ExtResource("3_j2mg1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk1em"]
atlas = ExtResource("3_j2mg1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xsjv"]
atlas = ExtResource("3_j2mg1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sexoq"]
atlas = ExtResource("3_j2mg1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6sc7"]
atlas = ExtResource("3_j2mg1")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qn5d"]
atlas = ExtResource("3_j2mg1")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypq82"]
atlas = ExtResource("3_j2mg1")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7bfp"]
atlas = ExtResource("3_j2mg1")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_76lmh"]
atlas = ExtResource("3_j2mg1")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_efpkv"]
atlas = ExtResource("3_j2mg1")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aovgr"]
atlas = ExtResource("3_j2mg1")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny3ft"]
atlas = ExtResource("3_j2mg1")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_06rm7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ykmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cyuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55yko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irg0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3wmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyqan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgaxw")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7goet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk1em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xsjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sexoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6sc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qn5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypq82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7bfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76lmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efpkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aovgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny3ft")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2bvor"]
height = 7.31097
radius = 2.17188

[sub_resource type="BoxShape3D" id="BoxShape3D_3lx0t"]
size = Vector3(14.3677, 8.37354, 17.1423)

[node name="Npc2" type="CharacterBody3D"]
script = ExtResource("1_3lx0t")

[node name="CompanionSprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 6.50819, 0)
flip_h = true
shaded = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_06rm7")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.666882

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.77488, 0)
shape = SubResource("CylinderShape3D_2bvor")

[node name="hum_player" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.50819, 0)
stream = ExtResource("4_4yykq")
max_db = 6.0
bus = &"Music"

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.50819, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_3lx0t")

[node name="InteractLabel3D" type="Label3D" parent="."]
transform = Transform3D(3.48474, 0, 0, 0, 3.03297, 0, 0, 0, 1, 0, 7.79498, 0)
visible = false
billboard = 1
text = "\"Press E to talk\""
